# PeakRDL-ipxact

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: build.yml
docs/: conf.py  exporter.rst  importer.rst  index.rst  requirements.txt
examples/: README.md  convert_to_ipxact.py  my_subblock.rdl  my_subblock.xml  print_hierarchy.py  top.rdl
peakrdl/ipxact/: exporter.py  importer.py  typemaps.py
ralbot/ipxact/: __init__.py  exporter.py  importer.py
ralbot_ipxact/: exporter.py
src/peakrdl/ipxact/: __about__.py  __init__.py  exporter.py  importer.py
src/peakrdl_ipxact/: __about__.py  __peakrdl__.py  exporter.py  importer.py  typemaps.py
test/: .coveragerc  pylint.rc  run.sh  test_import_export.py  unittest_utils.py
test/schema/: download_schema.sh
test/schema/1685-2014/: download_schema.sh
test/test_sources/: accelera-generic_example.rdl
tests/: .coveragerc  pylint.rc  run.sh  test_import_export.py  unittest_utils.py
tests/schema/1685-2009/: download_schema.sh
tests/schema/1685-2014/: download_schema.sh
tests/test_sources/: nested.rdl  nested_allpresent.rdl
