[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-ipxact"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "systemrdl-compiler ~= 1.30",
]

authors = [
    {name="Alex Mykyta"},
]
description = "Import and export IP-XACT XML to/from the systemrdl-compiler register model"
readme = "README.md"
license = {text = "LGPLv3"}
keywords = [
    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
    "IP-XACT",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.optional-dependencies]
cli = [
    "peakrdl-cli >= 1.2.3",
]

[project.urls]
Documentation = "https://peakrdl-ipxact.readthedocs.io"
Source = "https://github.com/SystemRDL/PeakRDL-ipxact"
Tracker = "https://github.com/SystemRDL/PeakRDL-ipxact/issues"
Changelog = "https://github.com/SystemRDL/PeakRDL-ipxact/releases"

[tool.setuptools.dynamic]
version = {attr = "peakrdl_ipxact.__about__.__version__"}

[project.entry-points."peakrdl.exporters"]
ip-xact = "peakrdl_ipxact.__peakrdl__:Exporter"

[project.entry-points."peakrdl.importers"]
ip-xact = "peakrdl_ipxact.__peakrdl__:Importer"
